syntax = "proto3";

package main;

option go_package = "grpc/proto";

message Ack {
  string message = 1;
}

message BidRequest {
  string bidder = 1;
  int32 bid = 2;
}

message ResultResponse {
  bool is_over = 1;
  int32 highest_bid = 2;
  string highest_bidder = 3;
}

message EmptyMessage {
    
}

service AuctionService {
  rpc Bid(BidRequest) returns (Ack) {}
  rpc Result(EmptyMessage) returns (ResultResponse) {}
  rpc ServerIsDesynchronized(ResultResponse) returns (Ack) {}

}

